ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: whoami
 namespace: whoami
 annotations:
   cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
 tls:
   - hosts:
       - k3s.boeg.io
     secretName: tls-whoami-ingress-http
 rules:
   - host: k3s.boeg.io
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: whoami
               port:
                 name: web
